# AndroidCLIP

./: .gitignore  CMakeLists.txt  README.md  clip.cpp  main.cpp  main.h
examples/clip.android/: build.gradle.kts  settings.gradle.kts
examples/clip.android/app/: build.gradle.kts
examples/clip.android/app/objectbox-models/: default.json
examples/clip.android/app/src/main/java/com/example/androidapp/: ClipSearchUI.kt  ImageEmbedding.kt  MainActivity.kt
examples/clip.android/clip/: build.gradle.kts
examples/clip.android/clip/src/androidTest/java/com/example/clip/: ExampleInstrumentedTest.kt
examples/clip.android/clip/src/main/cpp/: CMakeLists.txt  clip_android.cpp
examples/clip.android/clip/src/main/java/com/example/clip/: Encoding_result.kt  clipnative.kt
examples/clip.android/clip/src/main/java/com/example/clip/ui/theme/: Color.kt  Theme.kt  Type.kt
examples/clip.android/clip/src/main/res/values/: strings.xml
examples/clip.android/clip/src/test/java/com/example/clip/: ExampleUnitTest.kt
examples/clip.android/gradle/: libs.versions.toml
examples/clip.android/gradle/wrapper/: gradle-wrapper.properties
ggml/: CMakeLists.txt
